Fixed issue where small grid tiles are squished

--- a/styles.css
+++ b/styles.css
@@ -93,4 +93,5 @@ body {
     padding: 0.25em;
     background-color: white;
     flex: 1 1;
+    aspect-ratio: 1 / 1;
 }
